<resources>
    <string name="app_name">8-Puzzle</string>
    <string name="btn_text_tv_placeholder">Click Me!</string>
    <string name="btn_text_tv_start">Start</string>
    <string name="btn_text_tv_settings">Settings</string>
    <string name="btn_text_tv_leaderboard">Leaderboard</string>
    <string name="btn_text_tv_back">Back</string>
    <string name="btn_text_tv_cancel">Cancel</string>
    <string name="btn_text_tv_number">Classic Mode</string>
    <string name="btn_text_tv_picture">Picture Mode</string>
    <string name="btn_text_tv_photo">Photo Mode</string>
    <string name="btn_text_tv_pause">Pause</string>
    <string name="btn_text_tv_resume">Resume</string>
    <string name="btn_text_tv_upload">Upload score</string>
    <string name="btn_text_tv_exit">Exit</string>
    <string name="btn_text_tv_m_on">Music: On</string>
    <string name="btn_text_tv_m_off">Music: Off</string>
    <string name="btn_text_tv_t_on">Tilt Control: On</string>
    <string name="btn_text_tv_t_off">Tilt Control: Off</string>
    <string name="btn_text_tv_del">Reset Leaderboard</string>
    <string name="btn_text_tv_yes">Yes</string>
    <string name="btn_text_tv_no">No</string>
    <string name="row_position_tv_text">01</string>
    <string name="row_name_tv_text">Username</string>
    <string name="row_score_tv">10pts</string>
    <string name="main_empty_tv_text2"> </string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_5">5</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="main_logo_iv_desc">Logo</string>
    <string name="main_top_shadow_iv_desc">Top shadow</string>
    <string name="main_bottom_shadow_iv_desc">Bottom shadow</string>
    <string name="main_empty_tv_text">The leaderboard is empty</string>
    <string name="main_bg_iv_desc">Board bg</string>
    <string name="game_original_iv_desc">The original image</string>
    <string name="board_original_iv_desc">The original image</string>
    <string name="game_tiles_desc">A tile</string>
    <string name="game_timer_tv_text">00:00:00</string>
    <string name="score_title_tv_text">Your Score</string>
    <string name="score_score_tv_text">0pts</string>
    <string name="score_username_et_hint">username</string>
    <string name="pop_question_tv_exit">Do you want to exit?</string>
    <string name="pop_question_tv_reset">Do you want to reset?</string>
    <string name="main_tile_desc">Tile</string>
</resources>