<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/m_blue_primary_darkest">

    <TextView
        android:id="@+id/row_position_tv"

        android:text="@string/row_position_tv_text"
        android:textColor="@color/m_blue_primary"
        android:textSize="40sp"
        android:textStyle="bold"

        android:shadowColor="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_name_tv"

        android:text="@string/row_name_tv_text"
        android:textColor="@color/m_white"
        android:textSize="30sp"
        android:textStyle="bold"

        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row_position_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_score_tv"

        android:text="@string/row_score_tv"
        android:textColor="@color/m_yellow_secondary_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row_position_tv"
        app:layout_constraintTop_toBottomOf="@+id/row_name_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>