<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/m_blue_primary_darker"
    tools:context=".LeaderboardActivity">

    <TextView
        android:id="@+id/leaderboards_title_tv"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_text_tv_leaderboard"

        android:textColor="@color/m_white"
        android:textSize="48sp"

        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/leaderboards_back_btn"
        layout="@layout/card_btn"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leaderboard_empty_tv"

        android:text="@string/main_empty_tv_text"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@color/m_blue_primary_darkest"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/leaderboards_list_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leaderboards_list_rv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderboards_list_rv"

        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginTop="32dp"

        android:layout_marginBottom="40dp"

        app:layout_constraintBottom_toTopOf="@+id/leaderboards_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboards_title_tv" />

    <ImageView
        android:id="@+id/main_top_shadow_iv"

        android:alpha="0.75"
        android:adjustViewBounds="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leaderboards_list_rv"

        android:contentDescription="@string/main_top_shadow_iv_desc"
        app:srcCompat="@drawable/shadow" />

    <ImageView
        android:id="@+id/main_bottom_shadow_iv"

        android:adjustViewBounds="true"
        android:alpha="0.75"
        android:rotation="180"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/leaderboards_list_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:contentDescription="@string/main_bottom_shadow_iv_desc"
        app:srcCompat="@drawable/shadow" />

</androidx.constraintlayout.widget.ConstraintLayout>